--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,7 @@ on:
                 description: "Executar scan?"  
                 required: false
                 type: choice
+                default: true
                 options:
                     - true
                     - false
